name:                roguelike
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/roguelike#readme
license:             MIT
license-file:        LICENSE
author:              Killian Coddington
-- maintainer:          example@example.com
copyright:           2018 Killian Coddington
category:            Games
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable roguelike
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , ncurses
                     , containers
                     , random
                     , MonadRandom
  other-modules:       Action
                     , Level
                     , Monster
                     , Color
                     , Tile
                     , Draw
                     , Game
                     , Player
                     , Entity
                     , Position
                     , World
                     , Input
